--- a/settings.ini
+++ b/settings.ini
@@ -1,13 +1,14 @@
 [IRC]
 host = irc.freenode.net
+port = 6697
 nickname = markov
-port = 6667
 channel = #lobby
 
 [markov]
 chattiness = 0.1
 chain_length = 2
+seed = off
 
 [permissions]
-ignored_users = ""
-authed_users = example, example1
+auth_users =
+ignored_users =
